--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "reginald",
-  "version": "1.1.34",
-  "description": "task and recordkeeping bot for Juniper",
+  "name": "secret-cheeto",
+  "version": "1.1.1",
+  "description": "Plays Secret Hitler",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Juniper/Zaralys",
+  "author": "Rachel",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.3.1",
